# DataSharing

./: .DeviceInfo  .DeviceTable  README.md  VersionReadme.txt  build_android.sh  build_iOS.sh  build_lanServer.sh  build_lanServer_android.sh  build_macOs.sh  build_windows.ps1  build_windows.sh  go.mod  install_hooks.sh
clipboard/: CMakeLists.txt  clipboard.cpp  clipboard.h  common_message.cpp  common_message.h  pipeserver_control.cpp  pipeserver_control.h
clipboard/MSPaste/: MSCommon.h  MSCommonExt.h  MSDataObject.cpp  MSDataObject.h  MSFileDrop.cpp  MSFileDrop.h  MSITransData.h  MSImgHandler.cpp  MSImgHandler.h  MSPasteImpl.cpp  MSPasteImpl.h  MSProgressBar.cpp  MSProgressBar.h  MSStream.cpp  MSStream.h  MSUtils.cpp  MSUtils.h
clipboard/MSPipeServer/: IMSPipeConnection.cpp  IMSPipeConnection.h  MSPipeCommon.h  MSPipeController.cpp  MSPipeController.h  MSPipeObject.cpp  MSPipeObject.h  MSPipeUtils.cpp  MSPipeUtils.h
clipboard/asio-1.30.2/: asio.hpp
clipboard/asio-1.30.2/asio/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  associator.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  bind_immediate_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  (+84 more)
clipboard/asio-1.30.2/asio/detail/: array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  call_stack.hpp  chrono.hpp  chrono_time_traits.hpp  completion_handler.hpp  composed_work.hpp  concurrency_hint.hpp  conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  config.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  date_time_fwd.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_ops.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  epoll_reactor.hpp  event.hpp  eventfd_select_interrupter.hpp  exception.hpp  executor_function.hpp  executor_op.hpp  fd_set_adapter.hpp  fenced_block.hpp  functional.hpp  future.hpp  (+179 more)
clipboard/asio-1.30.2/asio/execution/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  context.hpp  context_as.hpp  executor.hpp  invocable_archetype.hpp  mapping.hpp  occupancy.hpp  outstanding_work.hpp  prefer_only.hpp  relationship.hpp
clipboard/asio-1.30.2/asio/experimental/: append.hpp  as_single.hpp  as_tuple.hpp  awaitable_operators.hpp  basic_channel.hpp  basic_concurrent_channel.hpp  cancellation_condition.hpp  channel.hpp  channel_error.hpp  channel_traits.hpp  co_composed.hpp  concurrent_channel.hpp  deferred.hpp  parallel_group.hpp  prepend.hpp
clipboard/asio-1.30.2/asio/generic/: basic_endpoint.hpp  datagram_protocol.hpp  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
clipboard/asio-1.30.2/asio/impl/: any_completion_executor.ipp  any_io_executor.ipp  append.hpp  as_tuple.hpp  awaitable.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  cancellation_signal.ipp  co_spawn.hpp  connect.hpp  connect_pipe.hpp  connect_pipe.ipp  consign.hpp  deferred.hpp  detached.hpp  error.ipp  error_code.ipp  execution_context.hpp  execution_context.ipp  executor.hpp  executor.ipp  io_context.hpp  io_context.ipp  multiple_exceptions.ipp  prepend.hpp  read.hpp  read_at.hpp  read_until.hpp  redirect_error.hpp  serial_port_base.hpp  serial_port_base.ipp  spawn.hpp  src.hpp  system_context.hpp  system_context.ipp  system_executor.hpp  thread_pool.hpp  thread_pool.ipp  use_awaitable.hpp  use_future.hpp  (+2 more)
clipboard/asio-1.30.2/asio/ip/: address.hpp  address_v4.hpp  address_v4_iterator.hpp  address_v4_range.hpp  address_v6.hpp  address_v6_iterator.hpp  address_v6_range.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_query.hpp  basic_resolver_results.hpp  host_name.hpp  icmp.hpp  multicast.hpp  network_v4.hpp  network_v6.hpp  resolver_base.hpp  resolver_query_base.hpp  tcp.hpp  udp.hpp  unicast.hpp  v6_only.hpp
clipboard/asio-1.30.2/asio/local/: basic_endpoint.hpp  connect_pair.hpp  datagram_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
clipboard/asio-1.30.2/asio/posix/: basic_descriptor.hpp  basic_stream_descriptor.hpp  descriptor.hpp  descriptor_base.hpp  stream_descriptor.hpp
clipboard/asio-1.30.2/asio/ssl/: context.hpp  context_base.hpp  error.hpp  host_name_verification.hpp  rfc2818_verification.hpp  stream.hpp  stream_base.hpp  verify_context.hpp  verify_mode.hpp
clipboard/asio-1.30.2/asio/traits/: equality_comparable.hpp  execute_member.hpp  prefer_free.hpp  prefer_member.hpp  query_free.hpp  query_member.hpp  (+8 more)
clipboard/ddcci/: crossShareDefine.h  displayUtils.cpp  typeDefine.h  windows_event_monitor.cpp  windows_event_monitor.h
clipboard/pipeserver-asio/: buffer_x.cpp  buffer_x.h  callbacks.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  global.h  global_utils.cpp  global_utils.h  pipe_connection.cpp  pipe_connection.h  pipe_server.cpp  pipe_server.h  timestamp.cpp  timestamp.h  utils.cpp  utils.h
(+954 files in other folders)
